<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeAutomation</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appliance_id">Appliance ID</string>
    <string name="appliance_name">Appliance Name</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="email_id">Email ID</string>
    <string name="phone_no">Phone Number</string>

</resources>
