<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkgrey"
    android:orientation="vertical" >
    
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
         
          <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/name"
             />
          
           <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
             />
          
           <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
           
           <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/repeat_password"/>
           
           <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_id"
             />
           
           <com.iangclifton.android.floatlabel.FloatLabel
            android:id="@+id/float_label_6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_no"
             />
           
           </LinearLayout>

    

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        
        android:layout_centerHorizontal="true"
        android:layout_marginTop="490dp"
        android:background="@drawable/beauty"
        android:scaleType="fitXY"
        android:text="SIGNUP" />

</RelativeLayout>